--- a/algebra-solver.html
+++ b/algebra-solver.html
@@ -31,6 +31,125 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/algebra-solver" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/algebra-solver" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Algebra Calculator | Step-by-Step Math Solver (Free & Private)",
+    "url": "https://www.alltoolai.com/algebra-solver",
+    "description": "Solve algebra problems instantly with step-by-step explanations. Supports linear, quadratic, polynomial, radicals, GCD/LCM, and more. Free, private, and browser-based."
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Algebra Solver",
+    "operatingSystem": "Web",
+    "applicationCategory": "EducationalApplication",
+    "description": "A free online algebra calculator providing instant step-by-step solutions for equations, expressions, polynomials, radicals, and more. Runs locally for privacy.",
+    "url": "https://www.alltoolai.com/algebra-solver",
+    "image": "https://www.alltoolai.com/assets/icons/algebra-solver.png",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "Linear and quadratic equation solver",
+      "Simplify and expand expressions",
+      "Polynomial arithmetic and division",
+      "Find GCD and LCM",
+      "Runs privately in-browser",
+      "No login or signup required"
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Algebra Math Solver",
+        "item": "https://www.alltoolai.com/algebra-solver"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your data never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which inputs are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Linear and quadratic equations, expressions with x or y, radicals via sqrt(n), integers for GCD/LCM."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I get step-by-step solutions?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, the tool shows clear steps for learning and review."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. It's lifetime free, unlimited, with no accounts or paywalls."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
