--- a/angle-unit-converter.html
+++ b/angle-unit-converter.html
@@ -31,6 +31,135 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/angle-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/angle-unit-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Angle Unit Converter | Free Radians ↔ Degrees Calculator",
+    "url": "https://www.alltoolai.com/angle-unit-converter",
+    "description": "Convert between radians, degrees, gradians, arcminutes, arcseconds, milliradians, and turns instantly. 100% offline, private, and free angle unit converter.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Angle Unit Converter",
+    "operatingSystem": "Web",
+    "applicationCategory": "UtilitiesApplication",
+    "description": "Offline, free, and private converter for angle units like radians, degrees, arcminutes, arcseconds, and milliradians.",
+    "url": "https://www.alltoolai.com/angle-unit-converter",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "Offline and private operation",
+      "Instant conversion between radians, degrees, and more",
+      "Unlimited free use",
+      "Accurate π-based rounding"
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Plane Angle Unit Converter",
+        "item": "https://www.alltoolai.com/angle-unit-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Radians vs degrees what’s the difference?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Degrees divide a circle into 360 parts, while radians measure arc length relative to radius — 2π radians in a full turn."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I convert degrees to radians?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use the formula: radians = degrees × π/180. Example: 90° = π/2 radians."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is a turn (revolution)?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "A full circle equals 1 revolution = 360° = 2π radians = 400 gradians."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What are arcminutes and arcseconds?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "1° = 60′ (arcminutes) and 1′ = 60″ (arcseconds). These help measure fine angular precision."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it runs fully in your browser without internet — no uploads or tracking."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
