--- a/audio-cutter.html
+++ b/audio-cutter.html
@@ -30,6 +30,138 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/audio-cutter" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/audio-cutter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free Online Audio Cutter",
+    "url": "https://www.alltoolai.com/audio-cutter",
+    "description": "Cut and trim audio files instantly in your browser. 100% private, fast, and free — supports MP3, WAV, OGG, and M4A formats with no uploads.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "AllToolAI Audio Cutter",
+    "operatingSystem": "Windows, macOS, Linux, iOS, Android",
+    "applicationCategory": "MultimediaApplication",
+    "description": "Free online tool to cut and trim audio files directly in your browser. 100% private — files never leave your device.",
+    "url": "https://www.alltoolai.com/audio-cutter",
+    "image": "https://www.alltoolai.com/assets/audio-cutter-thumbnail.jpg",
+    "featureList": [
+      "Trim and cut audio directly in browser",
+      "Supports MP3, WAV, OGG, M4A",
+      "Files never uploaded — privacy guaranteed",
+      "Fast and unlimited use",
+      "Works on desktop and mobile browsers"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Audio Tools",
+        "item": "https://www.alltoolai.com/audio-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Audio Cutter",
+        "item": "https://www.alltoolai.com/audio-cutter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your audio never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which formats can I use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Open MP3, WAV, OGG, and M4A. Export your cut as MP3."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, no signup, no watermarks, no limits."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does cutting affect quality?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We use high quality MP3 encoding. Starting with a high bitrate source helps preserve quality."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Works on modern browsers on iOS and Android."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
