--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -30,6 +30,128 @@
   <link rel="canonical" href="https://www.alltoolai.com/bmi-calculator" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/bmi-calculator" />
 
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebSite",  
+    "url": "https://www.alltoolai.com/",  
+    "name": "AllToolAI",  
+    "potentialAction": {  
+      "@type": "SearchAction",  
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",  
+      "query-input": "required name=search_term_string"  
+    }  
+  }  
+  </script>  
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebPage",  
+    "name": "BMI Calculator",  
+    "url": "https://www.alltoolai.com/bmi-calculator",  
+    "description": "Free BMI calculator to check your Body Mass Index using metric or imperial units. Instant, accurate, private tool to find your ideal weight range.",  
+    "inLanguage": "en",  
+    "isPartOf": {  
+      "@type": "WebSite",  
+      "url": "https://www.alltoolai.com/"  
+    }  
+  }  
+  </script>  
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "SoftwareApplication",  
+    "name": "BMI Calculator",  
+    "operatingSystem": "All",  
+    "applicationCategory": "HealthApplication",  
+    "url": "https://www.alltoolai.com/bmi-calculator",  
+    "description": "Free, private BMI calculator that computes Body Mass Index using metric and imperial units with instant results and no data tracking.",  
+    "featureList": [  
+      "Metric and Imperial units",  
+      "Instant calculation",  
+      "Privacy-focused processing",  
+      "Accurate BMI formula",  
+      "Free and unlimited use"  
+    ],  
+    "offers": {  
+      "@type": "Offer",  
+      "price": "0",  
+      "priceCurrency": "USD"  
+    },  
+    "publisher": {  
+      "@type": "Organization",  
+      "name": "AllToolAI",  
+      "url": "https://www.alltoolai.com/"  
+    }  
+  }  
+  </script>  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "BMI Calculator",
+        "item": "https://www.alltoolai.com/bmi-calculator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "FAQPage",  
+    "mainEntity": [  
+      {  
+        "@type": "Question",  
+        "name": "Is it private and secure?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. All calculations happen in your browser. Your data never leaves your device."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Which units can I use?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Both metric (kg/cm) and imperial (lb/ft/in). The tool also shows your healthy weight range by height."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "What is a good BMI?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "For most adults, a healthy BMI is 18.5–24.9. Consult a clinician for personalized advice."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Are results medical advice?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "No. BMI is a screening tool. For diagnosis or treatment, speak with a healthcare professional."  
+        }  
+      }  
+    ]  
+  }  
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
