--- a/bmr-calculator.html
+++ b/bmr-calculator.html
@@ -33,6 +33,135 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/bmr-calculator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/bmr-calculator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "BMR, TDEE & Macro Calculator | Free Calorie & Macro Planner",
+    "url": "https://www.alltoolai.com/bmr-calculator",
+    "description": "Instantly calculate your Basal Metabolic Rate (BMR) and Total Daily Energy Expenditure (TDEE). See your calorie and macro targets for weight loss, maintenance, or muscle gain.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "BMR, TDEE & Macro Calculator",
+    "applicationCategory": "HealthApplication",
+    "operatingSystem": "Any",
+    "url": "https://www.alltoolai.com/bmr-calculator",
+    "description": "Free online BMR and TDEE calculator that provides calorie and macronutrient targets using the Mifflin-St Jeor formula. Works offline and keeps your data private.",
+    "featureList": [
+      "BMR and TDEE calculation",
+      "Macro planning (Balanced, Low Carb, High Protein)",
+      "BMI formula guide",
+      "Private, browser-based operation"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "BMR Calculator",
+        "item": "https://www.alltoolai.com/bmr-calculator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Which BMR formula do you use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We use the Mifflin–St Jeor equation, widely regarded as most accurate for estimating resting energy needs in adults."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is TDEE?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "TDEE (Total Daily Energy Expenditure) is your daily calorie burn including activity. It’s calculated as BMR × an activity multiplier."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Are my results private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All calculations run locally in your browser. Your data never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What macro split should I choose?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Balanced (30% protein, 40% carbs, 30% fat) suits most people. Low Carb (40/25/35) may help appetite control. High Protein (40/30/30) supports muscle retention."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is this medical advice?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. These tools are for education and planning. For diagnosis or treatment, consult a qualified healthcare professional."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
