--- a/calorie-calculator.html
+++ b/calorie-calculator.html
@@ -26,6 +26,125 @@
   <meta name="twitter:description" content="Free, accurate TDEE calculator with macros. Private, no signup. Metric & Imperial." />
   <meta name="twitter:image" content="https://www.alltoolai.com/assets/img/og/calorie-calculator-1200x630.png" />
 
+  <!-- Hreflang (expand as you localize) -->
+  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/calorie-calculator" />
+  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/calorie-calculator" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Daily Calorie Calculator (TDEE & Macros)",
+    "url": "https://www.alltoolai.com/calorie-calculator",
+    "description": "Free calorie calculator that estimates your daily energy needs (TDEE) and personalized macronutrient plan using the Revised Harris–Benedict equation.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Calorie Calculator",
+    "operatingSystem": "Any",
+    "applicationCategory": "HealthApplication",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "url": "https://www.alltoolai.com/calorie-calculator",
+    "description": "A free, science-based calorie calculator that estimates TDEE and personalized macros for maintenance, loss, or gain goals.",
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Calorie Calculator",
+        "item": "https://www.alltoolai.com/calorie-calculator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All calculations run locally in your browser. Your data never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which formula do you use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The calculator uses the Revised Harris–Benedict equation for BMR and standard activity multipliers to estimate TDEE."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How big should my deficit/surplus be?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We offer mild (±250 kcal/day) and standard (±500 kcal/day) options. Start conservatively and adjust based on your progress."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you support Metric & Imperial?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Enter kg/cm or lbs/ft+in and switch units any time."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
