--- a/data-transfer-rate-unit-converter.html
+++ b/data-transfer-rate-unit-converter.html
@@ -31,6 +31,123 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/data-transfer-rate-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/data-transfer-rate-unit-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "AllToolAI",
+    "url": "https://www.alltoolai.com/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Data Transfer Rate Unit Converter",
+    "url": "https://www.alltoolai.com/data-transfer-rate-unit-converter",
+    "description": "Effortlessly convert between data transfer rate units including bit/s, kbit/s, Mbps, MB/s, Gbps, and more with this free, fast, and offline converter.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Data Transfer Rate Unit Converter",
+    "operatingSystem": "Web",
+    "applicationCategory": "UtilityApplication",
+    "description": "A free, fast, and secure online tool to convert between data transfer rate units such as bit/s, kbit/s, Mbps, MB/s, Gbps, and more.",
+    "url": "https://www.alltoolai.com/data-transfer-rate-unit-converter",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "Offline & secure conversion",
+      "Supports multiple units including Mbps, MB/s, Gbps",
+      "Free and unlimited usage",
+      "Fast and accurate results"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Data Transfer Rate Unit Converter",
+        "item": "https://www.alltoolai.com/data-transfer-rate-unit-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser — no uploads, no tracking, no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited conversions, and no sign ups."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Your browser can cache assets after the first visit and run offline."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Mbps vs MB/s?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Mbps means megabits per second; MB/s means megabytes per second. Divide by 8 to go from Mbps → MB/s."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
