--- a/digital-storage-unit-converter.html
+++ b/digital-storage-unit-converter.html
@@ -29,6 +29,135 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/digital-storage-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/digital-storage-unit-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Digital Storage Unit Converter",
+    "url": "https://www.alltoolai.com/digital-storage-unit-converter",
+    "description": "Effortlessly convert digital storage units including bits, bytes, KB, MB, GB, TB, PB, and binary units KiB, MiB, GiB, TiB, PiB. Instant, accurate, and private—works offline.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Digital Storage Unit Converter",
+    "operatingSystem": "Web Browser",
+    "applicationCategory": "UtilityApplication",
+    "description": "Fast, free, and private tool to convert data storage units including bits, bytes, KB, MB, GB, TB, PB and binary formats KiB, MiB, GiB, TiB, PiB. Runs offline and 100% client-side.",
+    "url": "https://www.alltoolai.com/digital-storage-unit-converter",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "Offline and secure conversion",
+      "Supports decimal and binary units",
+      "Instant and accurate results",
+      "Free and unlimited use"
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Digital Storage Unit Converter",
+        "item": "https://www.alltoolai.com/digital-storage-unit-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser with no uploads or tracking."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited conversions, and no sign ups required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which units are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The tool supports bits, bytes, KB/KiB, MB/MiB, GB/GiB, TB/TiB, PB/PiB."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The converter works entirely offline once loaded in your browser."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What’s KB vs KiB?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "KB is decimal (1000 bytes) while KiB is binary (1024 bytes). The converter handles both correctly."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
