--- a/email-qr-code-generator.html
+++ b/email-qr-code-generator.html
@@ -28,6 +28,143 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/email-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/email-qr-code-generator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Email QR Code Generator",
+    "url": "https://www.alltoolai.com/email-qr-code-generator",
+    "description": "Free, private, and fast Email QR Code Generator that lets you create mailto QR codes with custom subjects, bodies, and colors. Download as PNG or PDF.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Email QR Code Generator",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilitiesApplication",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "url": "https://www.alltoolai.com/email-qr-code-generator",
+    "description": "Generate and customize email QR codes that open mailto links with prefilled subject and message. 100% free, private, and local processing.",
+    "featureList": [
+      "Free and unlimited usage",
+      "Local browser processing",
+      "Download as PNG or PDF",
+      "Custom colors and logos"
+    ],
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Email QR Code Generator",
+        "item": "https://www.alltoolai.com/email-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your data is never uploaded to our servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which email apps are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Works with Gmail, Outlook, Apple Mail, Yahoo Mail, and most default mail apps on iOS and Android."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I include line breaks in the message?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. We URL encode the content, and most mail apps handle line breaks correctly in the body."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Any limits on subject/body length?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Some scanners and mail apps have URL length limits. For best compatibility, keep the total under about 2,000 characters."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I use a logo?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. We use high error correction so logos in the center scan reliably. Maintain good color contrast for best results."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it’s lifetime free and unlimited. No signup, no paywalls, and no watermarks."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
