--- a/energy-unit-converter.html
+++ b/energy-unit-converter.html
@@ -33,6 +33,128 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/energy-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/energy-unit-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Energy Unit Converter",
+    "url": "https://www.alltoolai.com/energy-unit-converter",
+    "description": "Free, instant, and private energy unit converter for Joule, kWh, cal, BTU, eV, therm, and more. Works offline, 100% client-side, accurate, and unlimited.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Energy Unit Converter",
+    "operatingSystem": "All modern browsers",
+    "applicationCategory": "UtilityApplication",
+    "description": "Convert energy units like Joule, kilowatt-hour, calorie, BTU, and electronvolt instantly. 100% offline, private, and free forever.",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Energy Unit Converter",
+        "item": "https://www.alltoolai.com/energy-unit-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser — no uploads, no tracking, and no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited conversions, and no sign ups."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which units are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "J, kJ, cal, kcal, Wh, kWh, eV, BTU, therm, and ft⋅lbf."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Your browser caches the app after the first visit, allowing full offline use."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How accurate are results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The tool uses precise conversion constants with smart rounding for readable and accurate results."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
