--- a/event-qr-code-generator.html
+++ b/event-qr-code-generator.html
@@ -31,6 +31,129 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/event-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/event-qr-code-generator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Event QR Code Generator",
+    "url": "https://www.alltoolai.com/event-qr-code-generator",
+    "description": "Create scannable QR codes for your events with title, date, time, location, and contact info. Customize colors, add logos, and download PNG or PDF—all free and private.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Event QR Code Generator",
+    "operatingSystem": "Web",
+    "applicationCategory": "UtilityApplication",
+    "description": "Generate event QR codes instantly with title, description, date, time, location, and contact. 100% browser-based, private, and free.",
+    "url": "https://www.alltoolai.com/event-qr-code-generator",
+    "image": "https://www.alltoolai.com/assets/images/event-qr-code-generator-preview.jpg",
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Event QR Code Generator",
+        "item": "https://www.alltoolai.com/event-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What can I encode?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You can encode title, description, date, time, location, event website, and a contact email."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work with calendars?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Most scanners show your event details. For one tap calendar adds, link your QR to an event page or ICS file hosted on your site."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "PNG vs PDF?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use PNG for web and screens; use PDF for high resolution prints and posters."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, lifetime free and unlimited. No sign ups required."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
