--- a/fertilizer-calculator.html
+++ b/fertilizer-calculator.html
@@ -18,7 +18,7 @@
   <meta property="og:description" content="Set N‑P‑K targets, adjust for soil, compute Urea/DAP/MOP or custom blend rates, split applications, and costs. Free, fast, and private.">
   <meta property="og:url" content="https://www.alltoolai.com/fertilizer-calculator">
   <meta property="og:site_name" content="AllToolAI">
-  <meta property="og:image" content="https://www.alltoolai.com/assets/img/fertilizer-calculator-og.png"> <!-- 1200x630 recommended -->
+  <meta property="og:image" content="https://www.alltoolai.com/assets/img/fertilizer-calculator-og.png">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
@@ -29,6 +29,139 @@
   <!-- GEO/Hreflang (add more locales later if you localize) -->
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/fertilizer-calculator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/fertilizer-calculator" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Fertilizer Calculator",
+    "url": "https://www.alltoolai.com/fertilizer-calculator",
+    "description": "Fast, free fertilizer calculator for precise NPK rates, costs, and conversions between kg/ha and lbs/acre. Optimized for global agriculture and soil types.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Fertilizer Calculator",
+    "url": "https://www.alltoolai.com/fertilizer-calculator",
+    "applicationCategory": "AgricultureTool",
+    "operatingSystem": "Web",
+    "description": "Free online NPK fertilizer calculator for professional crop nutrient and cost management, including split applications, soil-type adjustments, and custom blends.",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "NPK nutrient rate calculator",
+      "Custom fertilizer blends",
+      "Split application planner",
+      "Soil type adjustments",
+      "Cost estimation and budgeting"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Fertilizer Calculator",
+        "item": "https://www.alltoolai.com/fertilizer-calculator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your data never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Elemental P vs P₂O₅? K vs K₂O?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Targets are elemental P and K. The tool converts to P₂O₅ (×2.291) and K₂O (×1.205) for fertilizer sources."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which fertilizers are included?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Urea (46-0-0), DAP (18-46-0), MOP (0-0-60), and custom blends with N-P₂O₅-K₂O percentages."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I do split applications?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, typically for nitrogen. Phosphorus and potassium are often applied at planting."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it is lifetime free and unlimited with no signups or paywalls."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does this replace soil tests?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. Always use recent soil tests and local recommendations for final decisions."
+        }
+      }
+    ]
+  }
+  </script>
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
