--- a/html-to-text.html
+++ b/html-to-text.html
@@ -31,6 +31,124 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/html-to-text" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/html-to-text" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "All Tool AI",
+    "url": "https://www.alltoolai.com",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "HTML to Text Converter Strip HTML Tags Online (Free, Private)",
+    "url": "https://www.alltoolai.com/html-to-text",
+    "description": "Free HTML to Text converter by All Tool AI. Instantly strip all tags from HTML to get clean, readable text. 100% private, runs locally in your browser.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "HTML to Text Converter",
+    "operatingSystem": "Any",
+    "applicationCategory": "WebApplication",
+    "url": "https://www.alltoolai.com/html-to-text",
+    "description": "Free online HTML to Text converter by All Tool AI. Strip HTML tags, remove CSS/JS, and extract clean, readable text instantly. 100% private and runs locally in your browser.",
+    "softwareVersion": "1.0",
+    "author": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0.00",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Text Tools",
+        "item": "https://www.alltoolai.com/text-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Html To Text",
+        "item": "https://www.alltoolai.com/html-to-text"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your content never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What gets removed?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "All HTML, CSS, and scripts are stripped to produce clean text. Line breaks can be preserved."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, free and unlimited. No signup and no watermarks."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it support multiple languages?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. It works with any HTML text content and supports all modern browsers."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
