--- a/image-crop.html
+++ b/image-crop.html
@@ -30,6 +30,128 @@
   <!-- Hreflang (safe default if you only have English for now) -->
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-crop" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-crop" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "description": "All Tool AI provides free online image tools like crop, resize, compress, convert, rotate, and more — fast, private, and secure in your browser.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free Online Image Cropper | Crop, Resize & Export (PNG/JPG/WEBP)",
+    "url": "https://www.alltoolai.com/image-crop",
+    "description": "Crop images online for free. Fast, secure, and unlimited tool that works directly in your browser. Supports PNG, JPG, and WEBP formats.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Image Cropper",
+    "operatingSystem": "Web",
+    "applicationCategory": "MultimediaApplication",
+    "url": "https://www.alltoolai.com/image-crop",
+    "description": "A free, private, and fast online image cropper that works directly in your browser. Crop, resize, and export images as PNG, JPG, or WEBP instantly.",
+    "featureList": [
+      "Browser-based image cropping",
+      "Free and unlimited usage",
+      "Supports PNG, JPG, WEBP formats",
+      "100% privacy with local processing"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Image Tools",
+        "item": "https://www.alltoolai.com/image-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Image Cropper",
+        "item": "https://www.alltoolai.com/image-crop"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your files never leave your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which formats can I use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Upload JPG, PNG, and WebP. Export to PNG, JPG, or WebP from the format dropdown."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It’s lifetime free and unlimited — no signup, no watermarks, and no hidden limits."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does cropping affect quality?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We preserve resolution at export. Choose PNG/WebP for crisp quality or JPG with high quality for smaller files."
+        }
+      }
+    ]
+  }
+  </script>
     
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
