--- a/image-resize.html
+++ b/image-resize.html
@@ -28,6 +28,144 @@
 
   <link rel="alternate" href="https://www.alltoolai.com/image-resize" hreflang="en" />
   <link rel="alternate" href="https://www.alltoolai.com/image-resize" hreflang="x-default" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "description": "All Tool AI offers free, fast, and private online tools like image resizer, cropper, compressor, and converter.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free Online Image Resizer (PNG/JPG/WebP) | All Tool AI",
+    "url": "https://www.alltoolai.com/image-resize",
+    "description": "Resize images online free, fast, and private. Works directly in your browser — no upload, no watermarks, and supports PNG, JPG, and WebP.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/",
+      "name": "All Tool AI"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "All Tool AI Image Resizer",
+    "operatingSystem": "Web",
+    "applicationCategory": "MultimediaApplication",
+    "applicationSubCategory": "Image Editing",
+    "url": "https://www.alltoolai.com/image-resize",
+    "image": "https://www.alltoolai.com/icons/image-resize.png",
+    "description": "Resize images online instantly. 100% private, browser-based, supports JPG, PNG, and WebP formats.",
+    "featureList": [
+      "Resize images directly in the browser",
+      "No upload — fully private",
+      "Supports PNG, JPG, and WebP formats",
+      "Exact pixel control with presets",
+      "Free and unlimited"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Image Tools",
+        "item": "https://www.alltoolai.com/image-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Image Resize",
+        "item": "https://www.alltoolai.com/image-resize"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your files never leave your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which formats can I use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Upload JPG, PNG, and WebP. Export to PNG, JPG, or WebP from the format dropdown."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you support common presets?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes — social media, passport/ID, and print sizes such as 4×6 and 5×7."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It’s lifetime free and unlimited — no signup, no watermarks, and no hidden limits."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I reduce file size?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Export as JPG with slightly lower quality or use WebP for a smaller file with good quality."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. It works on modern browsers on iOS and Android."
+        }
+      }
+    ]
+  }
+  </script>
     
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
