--- a/image-rotate-flip.html
+++ b/image-rotate-flip.html
@@ -30,6 +30,133 @@
   <!-- Hreflang (safe default if you only have English for now) -->
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-rotate-flip" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-rotate-flip" />
+
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebSite",  
+    "url": "https://www.alltoolai.com/",  
+    "name": "All Tool AI",  
+    "potentialAction": {  
+      "@type": "SearchAction",  
+      "target": "https://www.alltoolai.com/?s={search_term_string}",  
+      "query-input": "required name=search_term_string"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebPage",  
+    "name": "Rotate & Flip Images Online 90/180/270°, Mirror, Straighten",  
+    "url": "https://www.alltoolai.com/image-rotate-flip",  
+    "description": "Free online image rotator and flipper to rotate, mirror, or straighten images in your browser. 100% private, no upload, no watermark, and full-resolution export.",  
+    "inLanguage": "en"  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "SoftwareApplication",  
+    "name": "Image Rotate & Flip",  
+    "operatingSystem": "Any",  
+    "applicationCategory": "WebApplication",  
+    "description": "Online tool to rotate, flip, or straighten images instantly in your browser. Free, private, and high quality.",  
+    "url": "https://www.alltoolai.com/image-rotate-flip",  
+    "image": "https://www.alltoolai.com/assets/tools/image-rotate-flip.jpg",  
+    "offers": {  
+      "@type": "Offer",  
+      "price": "0",  
+      "priceCurrency": "USD"  
+    },  
+    "publisher": {  
+      "@type": "Organization",  
+      "name": "All Tool AI"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org/",  
+    "@type": "BreadcrumbList",  
+    "itemListElement": [  
+      {  
+        "@type": "ListItem",  
+        "position": 1,  
+        "name": "Home",  
+        "item": "https://www.alltoolai.com/"  
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Image Tools",
+        "item": "https://www.alltoolai.com/image-tools"
+      },  
+      {  
+        "@type": "ListItem",  
+        "position": 3,  
+        "name": "Image Rotate & Flip",  
+        "item": "https://www.alltoolai.com/image-rotate-flip"  
+      }  
+    ]  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "FAQPage",  
+    "mainEntity": [  
+      {  
+        "@type": "Question",  
+        "name": "Is it private and secure?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. Everything runs locally in your browser; files never leave your device."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Which formats can I use?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Open JPG, PNG, or WebP. Export to PNG, JPG, or WEBP formats."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Can I rotate by 90/180/270°?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes, use the Rotate buttons for 90°, 180°, or 270°. For fine adjustments, use the Straighten slider."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Is it really free forever?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes, it’s lifetime free and unlimited. No signup, no watermarks, and no hidden limits."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Will the output be high quality?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes, the tool preserves full resolution during export. PNG and WebP ensure sharp results, while high-quality JPG offers smaller file sizes."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Does it fix EXIF orientation?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes, the exported file correctly reflects your chosen rotation or flip, overriding EXIF orientation data."  
+        }  
+      }  
+    ]  
+  }  
+  </script>
     
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
