--- a/images-compress.html
+++ b/images-compress.html
@@ -31,6 +31,129 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/images-compress" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/images-compress" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/images-compress",
+    "name": "Free Online Image Compressor - Compress JPG, PNG, WebP by Size or Quality",
+    "description": "Compress images to a target size or quality level directly in your browser. 100% private, free, and unlimited. Supports JPG, PNG, and WebP.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "All Tool AI - Image Compressor",
+    "description": "A free online image compressor to reduce file size or quality for JPG, PNG, and WebP images. Fast, private, and unlimited use directly in your browser.",
+    "image": "https://www.alltoolai.com/assets/icons/image-compressor.png",
+    "brand": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock",
+      "url": "https://www.alltoolai.com/images-compress"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Image Tools",
+        "item": "https://www.alltoolai.com/image-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Images Compressor",
+        "item": "https://www.alltoolai.com/images-compress"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your files never leave your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which formats can I use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Upload JPG, PNG, or WebP. For best compression results, export as JPG."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I hit an exact size (e.g., 100 KB)?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Use Target Size, enter 100 (KB), and compress. The tool aims to get as close as possible."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it's free and unlimited. No signup, no watermarks, no hidden limits."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you support batch compression?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, add multiple images and download all results as a ZIP."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
