--- a/images-to-pdf.html
+++ b/images-to-pdf.html
@@ -35,6 +35,139 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/images-to-pdf" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/images-to-pdf" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AlltoolAI",
+    "description": "Free, secure, and offline PDF tools for everyone. Convert, merge, compress, and manage PDF files directly in your browser.",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Image to PDF Converter",
+    "url": "https://www.alltoolai.com/images-to-pdf",
+    "description": "Convert images to PDF securely in your browser. 100% offline, free, and private. Combine JPG, PNG, WebP, and BMP into a professional PDF instantly.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Image to PDF Converter",
+    "operatingSystem": "Any (Web-based)",
+    "applicationCategory": "UtilityApplication",
+    "applicationSubCategory": "PDF Converter",
+    "url": "https://www.alltoolai.com/images-to-pdf",
+    "description": "Combine images into a professional PDF securely in your browser. 100% offline, free, and private tool supporting JPG, PNG, WebP, and BMP formats.",
+    "softwareVersion": "1.0",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    },
+    "featureList": [
+      "100% offline and private",
+      "Supports JPG, PNG, WebP, BMP",
+      "Custom page size, orientation, and margins",
+      "No watermarks or sign-ups",
+      "Instant download"
+    ],
+    "creator": {
+      "@type": "Organization",
+      "name": "AlltoolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Image to PDF Converter",
+        "item": "https://www.alltoolai.com/images-to-pdf"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is the Image to PDF converter free to use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, AlltoolAI's Image to PDF converter is completely free to use. There are no hidden fees, subscriptions, or sign-ups required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need to upload my images online to convert them?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No, the conversion happens entirely in your browser. Your images are never uploaded to any server, keeping your data 100% private and secure."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which image formats are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The tool supports common formats such as JPG, PNG, WebP, and BMP for conversion into a single PDF file."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I merge multiple images into one PDF?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, you can add multiple images and arrange them before converting. The tool will combine all selected images into a single PDF document."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does the tool work on mobile and desktop devices?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, AlltoolAI tools are web-based and work on any modern device or browser, including mobile, tablet, and desktop."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
