--- a/location-qr-code-generator.html
+++ b/location-qr-code-generator.html
@@ -32,6 +32,141 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/location-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/location-qr-code-generator" />
 
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebSite",  
+    "url": "https://www.alltoolai.com/",  
+    "name": "AllToolAI",  
+    "potentialAction": {  
+      "@type": "SearchAction",  
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",  
+      "query-input": "required name=search_term_string"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebPage",  
+    "name": "Location QR Code Generator",  
+    "url": "https://www.alltoolai.com/location-qr-code-generator",  
+    "description": "Generate free location QR codes from GPS coordinates or addresses. Opens directly in Google or Apple Maps. 100% client-side and private.",  
+    "inLanguage": "en",  
+    "isPartOf": {  
+      "@type": "WebSite",  
+      "url": "https://www.alltoolai.com"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "SoftwareApplication",  
+    "name": "Location QR Code Generator",  
+    "operatingSystem": "Web",  
+    "applicationCategory": "UtilityApplication",  
+    "url": "https://www.alltoolai.com/location-qr-code-generator",  
+    "description": "Fast, free, and private QR code generator for locations. Create GPS or address-based QR codes that open in Google or Apple Maps.",  
+    "featureList": [  
+      "geo: URI support",  
+      "Address and coordinates input",  
+      "Logo and color customization",  
+      "PNG and PDF export",  
+      "100% client-side processing"  
+    ],  
+    "offers": {  
+      "@type": "Offer",  
+      "price": "0",  
+      "priceCurrency": "USD",  
+      "category": "Free"  
+    },  
+    "publisher": {  
+      "@type": "Organization",  
+      "name": "AllToolAI",  
+      "url": "https://www.alltoolai.com",  
+      "logo": {  
+        "@type": "ImageObject",  
+        "url": "https://www.alltoolai.com/logo.png"  
+      }  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Location QR Code Generator",
+        "item": "https://www.alltoolai.com/location-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "FAQPage",  
+    "mainEntity": [  
+      {  
+        "@type": "Question",  
+        "name": "What is a location QR code?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "It opens a map with your coordinates or address so users can navigate there easily."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Coordinates vs. address?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Coordinates pin outdoor spots precisely. Addresses are ideal for buildings and venues."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Private and secure?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes, the tool runs 100% client-side, with no data sent or stored."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Which map apps are supported?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Google Maps, Apple Maps, and most default map apps on Android and iOS are supported."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Logo and color support?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes, you can choose custom colors and add a logo overlay with high error correction."  
+        }  
+      }  
+    ]  
+  }  
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
