--- a/mass-unit-converter.html
+++ b/mass-unit-converter.html
@@ -31,6 +31,136 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/mass-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/mass-unit-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Mass Unit Converter",
+    "url": "https://www.alltoolai.com/mass-unit-converter",
+    "description": "Convert between kilograms, pounds, grams, ounces, tonnes, stones, and more with the free, private, and offline Mass Unit Converter from AllToolAI.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Mass Unit Converter",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilitiesApplication",
+    "url": "https://www.alltoolai.com/mass-unit-converter",
+    "description": "A free, fast, and private mass conversion tool supporting kg, lb, g, oz, t, st, and more units. Works offline and does not collect data.",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "Offline and secure",
+      "Unlimited and free forever",
+      "Fast and accurate conversions",
+      "Supports metric and imperial units",
+      "Works across all devices"
+    ],
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Mass Unit Converter",
+        "item": "https://www.alltoolai.com/mass-unit-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser — no uploads, no tracking, no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The Mass Unit Converter is lifetime free, unlimited, and requires no sign-ups."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which units are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It supports tonnes, kilograms, grams, milligrams, micrograms, imperial tons, US tons, stones, pounds, and ounces."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. After your first visit, the converter runs offline using cached assets."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How accurate are results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It uses precise constants, such as 1 lb = 0.453592 kg, with smart rounding for readability."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
