--- a/age-calculator.html
+++ b/age-calculator.html
@@ -39,6 +39,130 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/age-calculator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/age-calculator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free Age Calculator | All Tool AI",
+    "url": "https://www.alltoolai.com/age-calculator",
+    "description": "Calculate your exact age in years, months, and days with All Tool AI's free, private, and secure age calculator. Works worldwide—no data sharing or tracking.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Age Calculator",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilitiesApplication",
+    "description": "Free online age calculator that computes your exact age in years, months, days, hours, and minutes from your date of birth.",
+    "url": "https://www.alltoolai.com/age-calculator",
+    "image": "https://www.alltoolai.com/assets/images/age-calculator-icon.png",
+    "author": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    },
+    "featureList": [
+      "Calculate age in years, months, and days",
+      "Next birthday countdown",
+      "Total days, hours, and minutes lived",
+      "Private and offline processing",
+      "Supports international date formats"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Age Calculator",
+        "item": "https://www.alltoolai.com/age-calculator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All calculations happen in your browser. Your data never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which date formats can I use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We support your device locale: MM/DD/YYYY (USA), DD/MM/YYYY (UK/India), and more via the native date picker."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need my exact time of birth?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No, it’s optional. Time of birth improves precision for totals like hours and minutes."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes—lifetime free and unlimited. No signup, no paywalls, no watermarks."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
