--- a/base64-to-image.html
+++ b/base64-to-image.html
@@ -30,6 +30,136 @@
   <!-- Hreflang (safe default if you only have English for now) -->
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/base64-to-image" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/base64-to-image" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "All Tool AI",
+    "url": "https://www.alltoolai.com",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Base64 to Image Converter",
+    "url": "https://www.alltoolai.com/base64-to-image",
+    "description": "Free online Base64 to Image converter. Decode Base64 strings and preview images instantly. 100% private, client-side, and unlimited use.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com",
+      "name": "All Tool AI"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Base64 to Image Converter",
+    "operatingSystem": "Web",
+    "applicationCategory": "UtilityApplication",
+    "description": "Convert Base64 strings to images instantly in your browser. Free, private, and client-side.",
+    "url": "https://www.alltoolai.com/base64-to-image",
+    "featureList": [
+      "Instant Base64 decoding and image preview",
+      "Supports PNG, JPG, JPEG, WebP, and SVG",
+      "100% privacy – processed locally in your browser",
+      "Free and unlimited use"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Image Tools",
+        "item": "https://www.alltoolai.com/image-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Base64 to Image",
+        "item": "https://www.alltoolai.com/base64-to-image"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your data never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which formats can I use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "PNG, JPG/JPEG, WebP for preview and download. SVG data URIs are also supported."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need the data URI prefix?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Use data:image/<type>;base64, followed by your Base64 string."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It’s lifetime free and unlimited — no signup, no watermarks, and no hidden limits."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I use it offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, if cached, many browsers will still run it locally. For guaranteed offline use, save the page or use a PWA setup."
+        }
+      }
+    ]
+  }
+  </script>
     
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
