--- a/bitcoin-qr-code-generator.html
+++ b/bitcoin-qr-code-generator.html
@@ -32,6 +32,136 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/bitcoin-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/bitcoin-qr-code-generator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Bitcoin QR Code Generator (BIP21)",
+    "url": "https://www.alltoolai.com/bitcoin-qr-code-generator",
+    "description": "Generate Bitcoin payment QR codes instantly using the BIP21 standard. Add amount, message, custom colors, logo, and download as PNG or PDF – private and client-side.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Bitcoin QR Code Generator",
+    "applicationCategory": "UtilityApplication",
+    "operatingSystem": "Web",
+    "description": "Client-side Bitcoin QR code generator supporting BIP21 format with custom colors, logos, and PNG/PDF downloads. Private, secure, and free to use.",
+    "url": "https://www.alltoolai.com/bitcoin-qr-code-generator",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "BIP21 compliant QR codes",
+      "Supports bech32 and legacy Bitcoin addresses",
+      "Custom colors and logos",
+      "High-resolution PNG/PDF exports",
+      "100% client-side and private"
+    ],
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "BitCoin QR Code Generator",
+        "item": "https://www.alltoolai.com/bitcoin-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is BIP21?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "BIP21 is the standard Bitcoin URI format that encodes address plus optional amount and message for wallets to read."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which addresses are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "bech32 (bc1), P2PKH (1), and P2SH (3) formats are supported by most wallets."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I add amount and message?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, enter an amount in BTC and an optional message (e.g., invoice or donation note)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Lightning supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "This tool is for on-chain Bitcoin QRs (BIP21). Lightning invoices (lnurl/bolt11) are not included."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
