--- a/compound-interest-calculator.html
+++ b/compound-interest-calculator.html
@@ -35,6 +35,127 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/compound-interest-calculator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/compound-interest-calculator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Compound Interest Calculator",
+    "url": "https://www.alltoolai.com/compound-interest-calculator",
+    "description": "Free, fast, and private compound interest calculator. Calculate future value with daily, weekly, monthly, quarterly, or annual compounding.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Compound Interest Calculator",
+    "operatingSystem": "Any",
+    "applicationCategory": "FinanceApplication",
+    "description": "A free, fast, and private compound interest calculator that runs locally in your browser. Supports multiple compounding frequencies and currencies.",
+    "url": "https://www.alltoolai.com/compound-interest-calculator",
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "featureList": [
+      "Daily, weekly, monthly, quarterly, and annual compounding",
+      "Date-based and duration-based calculations",
+      "Detailed breakdowns by day, week, month, and year",
+      "Runs locally for full privacy"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Compound Interest Calculator",
+        "item": "https://www.alltoolai.com/compound-interest-calculator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All calculations happen in your browser. Your data never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What compounding frequencies can I use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You can use daily, weekly, monthly, quarterly, and annual compounding, or calculate using exact dates."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is APY vs APR?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "APR is the annual rate without compounding, while APY includes compounding, which makes returns higher for the same APR with more frequent compounding."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it's lifetime free and unlimited. No signup, no paywalls, no watermarks."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
