--- a/date-calculator.html
+++ b/date-calculator.html
@@ -40,6 +40,124 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/date-calculator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/date-calculator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Online Date Calculator: Time Between Dates",
+    "url": "https://www.alltoolai.com/date-calculator",
+    "description": "Free, private, and accurate online date calculator to find the time between two dates, add or subtract from a date, and determine the day of the week.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "AllToolAI Date Calculator",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilitiesApplication",
+    "description": "A fast, free, and private date calculator that computes time between dates, adds or subtracts days, weeks, months, or years, and identifies the day of the week.",
+    "url": "https://www.alltoolai.com/date-calculator",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "Calculate days, weeks, months, or years between dates",
+      "Add or subtract time from any date",
+      "Find the weekday for any given date",
+      "Handles leap years and timezone differences",
+      "Works locally in your browser for privacy"
+    ],
+    "applicationSubCategory": "Date and Time Calculator"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Date Calculator",
+        "item": "https://www.alltoolai.com/date-calculator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All calculations happen locally in your browser. Your dates are never sent to our servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which date formats can I use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We use your device’s native date picker, supporting common formats like MM/DD/YYYY and DD/MM/YYYY."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you handle leap years and month lengths?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The calculator accounts for leap years and varying month lengths for accurate results."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes—lifetime free, fast, and unlimited. No signups, no paywalls, no watermarks."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
