--- a/frequency-unit-converter.html
+++ b/frequency-unit-converter.html
@@ -29,6 +29,143 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/frequency-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/frequency-unit-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/frequency-unit-converter",
+    "name": "Frequency Unit Converter (Hz ⇄ kHz ⇄ MHz ⇄ GHz)",
+    "description": "Convert frequency units instantly between Hertz (Hz), Kilohertz (kHz), Megahertz (MHz), and Gigahertz (GHz). Fast, free, private, and offline frequency conversion tool.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Frequency Unit Converter",
+    "applicationCategory": "UtilitiesApplication",
+    "operatingSystem": "Any",
+    "url": "https://www.alltoolai.com/frequency-unit-converter",
+    "description": "A fast, free, and private frequency unit converter that works offline and converts between Hz, kHz, MHz, and GHz instantly.",
+    "featureList": [
+      "Offline and secure conversion",
+      "Unlimited free use",
+      "Instant accurate results",
+      "Supports Hz, kHz, MHz, GHz"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "creator": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Frequency Unit Converter",
+        "item": "https://www.alltoolai.com/frequency-unit-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser — no uploads, no tracking, no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited conversions, and no sign ups."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which units are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Hz, kHz, MHz, and GHz. More units such as mHz, µHz, THz, RPM, and BPM are coming soon."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Your browser can cache assets after the first visit and run offline."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How accurate are results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We use precise constants and smart rounding for readability."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I convert frequency and period?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use T = 1 / f. Example: 50 Hz → 0.02 s period."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
