--- a/images-convert.html
+++ b/images-convert.html
@@ -31,6 +31,132 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/images-convert" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/images-convert" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/images-convert",
+    "name": "Free Online Image Converter | PNG ↔ JPG ↔ WebP",
+    "description": "Batch convert images to PNG, JPG, or WebP with full quality control. 100% private—files stay on your device. Free, fast, and secure browser-based converter.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    },
+    "inLanguage": "en"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "All Tool AI Image Converter",
+    "applicationCategory": "MultimediaApplication",
+    "operatingSystem": "Web",
+    "url": "https://www.alltoolai.com/images-convert",
+    "image": "https://www.alltoolai.com/icons/image-convert.png",
+    "description": "Free online image converter to convert PNG, JPG, and WebP locally in your browser with full privacy and batch processing.",
+    "featureList": [
+      "Batch image conversion",
+      "Adjustable quality control",
+      "Supports PNG, JPG, WebP",
+      "100% browser-based privacy",
+      "ZIP download for converted files"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Image Tools",
+        "item": "https://www.alltoolai.com/image-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Image Converter",
+        "item": "https://www.alltoolai.com/images-convert"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "How can I convert images using All Tool AI?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Simply upload your images, choose the desired format (PNG, JPG, or WebP), adjust quality if needed, and click 'Convert'. Once completed, you can download all converted files in a ZIP package."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is my data safe when using this image converter?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All conversions happen locally in your browser—no files are uploaded to any server. Your images remain 100% private and secure."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What image formats does All Tool AI support?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The converter supports PNG, JPG, and WebP formats. You can convert any of these to each other easily."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I convert multiple images at once?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The tool supports batch image conversion, allowing you to upload and process multiple files simultaneously."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is the image converter free to use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The All Tool AI image converter is completely free to use with no account or installation required."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
