--- a/ip-subnet-calculator.html
+++ b/ip-subnet-calculator.html
@@ -31,6 +31,122 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/ip-subnet-calculator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/ip-subnet-calculator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/ip-subnet-calculator",
+    "name": "IP Subnet Calculator (IPv4/CIDR) | Free, Fast, Private | AllToolAI",
+    "description": "Free IP Subnet Calculator to compute network address, broadcast address, usable hosts, subnet masks, wildcard masks, and binary representations for IPv4/CIDR inputs. 100% private, runs locally in your browser.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "IP Subnet Calculator",
+    "operatingSystem": "Web",
+    "applicationCategory": "UtilityApplication",
+    "description": "A free, fast, and private IPv4/CIDR subnet calculator that provides network details, usable hosts, wildcard masks, and binary representations directly in your browser.",
+    "url": "https://www.alltoolai.com/ip-subnet-calculator",
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "IP Subnet Calculator",
+        "item": "https://www.alltoolai.com/ip-subnet-calculator"
+      }
+    ]
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All calculations happen in your browser. Your data never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which inputs are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Enter IPv4 and CIDR (e.g., 10.0.0.1/24) or IPv4 with a mask (e.g., 10.0.0.1 and 255.255.255.0)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is a wildcard mask?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It’s the inverse of the subnet mask. Commonly used for firewall or ACL match rules (e.g., 0.0.0.255 for /24)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it’s lifetime free and unlimited. No signup, no paywalls, no watermarks."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
