--- a/length-unit-converter.html
+++ b/length-unit-converter.html
@@ -32,6 +32,138 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/length-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/length-unit-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Length Unit Converter",
+    "url": "https://www.alltoolai.com/length-unit-converter",
+    "description": "Free, fast, and private length unit converter for m, cm, mm, km, in, ft, yd, mi, µm, nm, and nmi. 100% client-side and secure.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Length Unit Converter",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilitiesApplication",
+    "description": "Convert length units instantly and privately between m, cm, mm, km, in, ft, yd, mi, µm, nm, and nmi. Works offline, 100% free, secure, and client-side.",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "url": "https://www.alltoolai.com/length-unit-converter",
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Length Unit Converter",
+        "item": "https://www.alltoolai.com/length-unit-converter"
+      }
+    ]
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser with no uploads, no tracking, and no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. It’s lifetime free, unlimited, and requires no sign-ups."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which units are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It supports m, cm, mm, km, in, ft, yd, mi, µm, nm, and nmi."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The tool runs entirely in your browser and can be cached for offline use."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How accurate are results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It uses precise conversion constants with smart rounding for readable and accurate results."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I use it on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. It works on modern mobile and desktop browsers across all platforms."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
