--- a/loan-calculator.html
+++ b/loan-calculator.html
@@ -31,6 +31,129 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/loan-calculator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/loan-calculator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Loan & EMI Calculator | AllToolAI",
+    "url": "https://www.alltoolai.com/loan-calculator",
+    "description": "Fast, private, and free loan calculator for home, auto, and personal loans. Calculate EMI, total interest, and view amortization schedules securely on your device.",
+    "breadcrumb": {
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://www.alltoolai.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Calculator Tools",
+          "item": "https://www.alltoolai.com/calculator-tools"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Loan Calculator",
+          "item": "https://www.alltoolai.com/loan-calculator"
+        }
+      ]
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Loan & EMI Calculator",
+    "operatingSystem": "All (Web-based)",
+    "applicationCategory": "FinanceApplication",
+    "description": "A free, private, and accurate loan calculator for mortgages, auto loans, and personal loans. Compute EMI, total interest, and amortization schedules locally on your device.",
+    "url": "https://www.alltoolai.com/loan-calculator",
+    "featureList": [
+      "EMI and amortization calculation",
+      "Privacy-first: 100% on-device computation",
+      "Supports global loan types and currencies",
+      "Free, unlimited use",
+      "Mobile and desktop compatible"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is an EMI and how is it calculated?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "EMI (Equated Monthly Installment) = P × r × (1+r)^n / [(1+r)^n − 1], where P is the principal, r is the monthly rate (annual/12), and n is the number of months."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it include taxes/insurance/fees?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No, the calculator shows principal and interest only. Taxes, insurance, and fees should be added separately."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I use it worldwide?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it supports global loan terms including EMI (India), APR (USA), and home loan (UK/AU)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is my data private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, everything is calculated locally in your browser. No data leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What about extra payments?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "This version models fixed payments. To include extra payments, reduce the principal and recalculate or request an extra payment feature."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
