--- a/math-equation-solver.html
+++ b/math-equation-solver.html
@@ -31,6 +31,129 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/math-equation-solver" />
   <link rel="alternate" hreflang="en-GB" href="https://www.alltoolai.com/math-equation-solver" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Math Equation Solver",
+    "url": "https://www.alltoolai.com/math-equation-solver",
+    "description": "Solve linear, quadratic, or systems of equations instantly with step-by-step breakdowns using the free, private Math Equation Solver by AllToolAI.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Math Equation Solver",
+    "operatingSystem": "Any",
+    "applicationCategory": "EducationalApplication",
+    "url": "https://www.alltoolai.com/math-equation-solver",
+    "description": "Instantly solve linear, quadratic, and systems of equations with detailed step-by-step solutions. 100% free and privacy-protected.",
+    "featureList": [
+      "Step-by-step equation solving",
+      "Supports linear, quadratic, and simultaneous equations",
+      "Works entirely in your browser with no uploads",
+      "Free and unlimited use",
+      "Mobile-friendly interface"
+    ],
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+          "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Math Equation Solver",
+        "item": "https://www.alltoolai.com/math-equation-solver"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Which equations are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The solver supports linear (ax + b = c), quadratic (ax² + bx + c = 0), and 2-variable systems."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you store my equations?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No, everything runs locally in your browser for maximum privacy."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free and unlimited. No signups, no paywalls, no watermarks."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it show steps?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it explains the method and key steps for each solution."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
